feat(ui): add button cancel when editing infomationon account management screen

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,9 @@
 body {
     @apply font-nunito;
   }
+
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+    display: none;
+}
+  
