fix: responsive ui

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,10 +4,23 @@
 
 body {
     @apply font-nunito;
-  }
+}
 
 input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
     display: none;
 }
-  
+
+/* @media (max-width: 1024px) {
+    .ml-60 {
+        margin-left: 0;
+    }
+
+    header h1 {
+        font-size: 1.5rem;
+    }
+
+    .main-content {
+        padding: 1rem;
+    }
+} */
